# python-analyzer-tool

./: analyzer-v1.py  file_analyzer_structure_2026-05-08_16-17.txt  learning-prompt.txt  main.py  pyproject.toml  report.json
file_analyzer/: cli.py  core.py  dependency.py  schemas.py
file_analyzer/api/: routes.py
output/: hello.py
